<resources>

    <!-- Common -->
    <string name="app_name">Awala</string>
    <string name="close">Close</string>
    <string name="stop">Stop</string>
    <string name="continue_">Continue</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>

    <!-- Main -->
    <string name="main_status_internet">You’re connected to Awala via the Internet</string>
    <string name="main_status_internet_text">
        So there’s not much to do here. Feel free to close this app and enjoy your Awala apps.
        \n\nCome back if you’re cut off from the Internet.
    </string>
    <string name="main_status_courier">You’re connected to a courier</string>
    <string name="main_status_courier_text">
        So you’re good to go!
        \n\nRemember: Your data is safe while it’s in transit and if it gets lost
        we’ll try to deliver it again.
    </string>
    <string name="main_status_disconnected">You’re disconnected from Awala</string>
    <string name="main_status_disconnected_text">
        You can still send and receive data from the Internet via Awala couriers:
        Simply connect to a nearby courier and we’ll do the rest.
        \n\nRemember: It’s impossible for anyone to see or change your data in transit, nor can anyone
        see which apps you’re using.
        \n\nAlso, any data lost in transit will be re-delivered at the earliest opportunity.
    </string>
    <string name="main_courier_connection">Sync with a courier</string>
    <string name="main_status_internet_no_gateway">You’re connected to the Internet but not Awala</string>
    <string name="main_status_internet_no_gateway_text">This may be a transient issue that will fix itself soon or, if you live in a country where access to the Internet is censored, it may be that Awala is blocked. If you think it may be the latter, try using a VPN (we recommend TunnelBear).</string>
    <string name="no_gateway_vpn_action">Install TunnelBear</string>
    <string name="no_gateway_help_action">Get help online</string>
    <!-- Courier Connection -->
    <string name="courier_instructions_title">
        If there’s a courier near you, connect to their Wi-Fi network to sync data.
    </string>
    <string name="courier_instructions_list_title">You will have to:</string>
    <string name="courier_instructions_1_bullet">1</string>
    <string name="courier_instructions_2_bullet">2</string>
    <string name="courier_instructions_3_bullet">3</string>
    <string name="courier_instructions_1">Turn on your Wi-Fi if it’s off.</string>
    <string name="courier_instructions_2">Connect to the courier’s network.</string>
    <string name="courier_instructions_3">Wait until their device is ready.</string>
    <string name="courier_configure_wifi">Open Wi-Fi settings</string>
    <string name="courier_connected">You’re now connected!</string>
    <string name="courier_connected_text">We’re ready to exchange data with the courier.</string>
    <string name="courier_sync_start">Start sync</string>

    <!-- Courier Sync -->
    <string name="sync_courier_title">Syncing with a courier</string>
    <string name="sync_courier_action">Sync with the courier</string>
    <string name="sync_delivering_cargo">Delivering data…</string>
    <string name="sync_waiting">Waiting for the incoming data to become available…</string>
    <string name="sync_collecting_cargo">Collecting data…</string>
    <string name="sync_finished">Done!</string>
    <string name="sync_error">An error has occurred. You may try again.</string>
    <string name="sync_stop_confirm_title">
        Are you sure you want to interrupt the synchronization?
    </string>
    <string name="sync_internet_stop_confirm_message">The sync hasn’t finished yet.</string>

    <!-- Onboarding -->
    <string name="onboarding_title_1">Welcome to Awala!</string>
    <string name="onboarding_text_1">
        Awala enables compatible apps on your device to send and receive data from the Internet
        securely, even when you’re disconnected from the Internet.
    </string>
    <string name="onboarding_title_2">Using Awala is easy</string>
    <string name="onboarding_text_2">
        When you’re connected to the Internet, your apps will simply use it seamlessly.
        \n\nWhen you’re cut off from the Internet, Awala couriers will transport your apps’ data
        securely to and from the Internet.
    </string>
    <string name="onboarding_title_3">Awala keeps you safe</string>
    <string name="onboarding_text_3">
        Awala apps use end-to-end encryption, so it’s impossible for this app or couriers to see
        their data.
        \n\nIt’s also impossible for couriers to find out which apps you’re using. And needless to
        say we aren’t tracking you or your apps!
    </string>
    <string name="onboarding_action">Get started!</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version %1$s (%2$s)</string>
    <string name="settings_learn_more">Learn more about Awala</string>
    <string name="settings_open_libraries">See open source libraries</string>
    <string name="settings_licenses">Open Source Libraries</string>
    <string name="settings_data">Outgoing Data</string>
    <string name="settings_data_in_transit">In transit</string>
    <string name="settings_data_queued">Queued</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="settings_pgw">Internet Gateway</string>
    <string name="settings_pgw_new">New Internet Gateway</string>
    <string name="settings_pgw_warning">
        Migrating to a new gateway should only be done by advanced users who understand the
        consequences.
        \n\nAt present, changing this gateway will most likely prevent your existing Awala apps
        from receiving data for a while.
        \n\nGateways ending with “.relaycorp.services” are provided by Relaycorp, and we don’t spy
        on or censor our users. If you switch to another provider, make sure they don’t either.
    </string>
    <string name="settings_pgw_migrate">Migrate</string>
    <string name="settings_pgw_migrating">Migrating…</string>
    <string name="settings_pgw_insert">Enter the new address</string>
    <string name="settings_pgw_valid">Address looks valid</string>
    <string name="settings_pgw_migrate_confirm">
        Are you sure you want to migrate to this Internet gateway?
    </string>
    <string name="settings_pgw_migration_successful">Internet gateway migration successful</string>
    <string name="settings_pgw_migration_same_address">
        Same as current address
    </string>
    <string name="settings_pgw_migration_failed_to_resolve">
        Could not resolve Internet gateway address. Please confirm it is correct.
    </string>
    <string name="settings_pgw_migration_failed_to_register">
        Could not register with Internet gateway. Please try again later.
    </string>

</resources>
