<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.sync.CourierConnectionActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:id="@+id/innerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/stateMessage"
            android:layout_width="match_parent"
            android:textIsSelectable="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="@string/courier_connected" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
