<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?android:colorBackground"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/Widget.Gateway.ToolbarTitle"
                android:text="@string/app_name"
                tools:ignore="SelectableText" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/settings"
                android:padding="8dp"
                android:src="@drawable/ic_settings"
                android:tint="?colorOnSurface" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/innerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="32dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:layout_marginVertical="32dp"
                android:importantForAccessibility="no"
                android:src="@drawable/main_connected_image" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:gravity="center_horizontal"
                android:text="@string/main_status_internet"
                android:textAppearance="@style/TextAppearance.Gateway.Title" />

            <TextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:gravity="center_horizontal"
                android:text="@string/main_status_internet_text" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/courierConnection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_courier_connection"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/courierSync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_courier"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
